--- a/FE/src/app/page.css
+++ b/FE/src/app/page.css
@@ -1,11 +1,4 @@
 /* General page styles */
-.header { 
-    background-color: #333;
-    color: white;
-    padding: 1em;
-    text-align: center;
-}
-
 .container {
     flex-direction: column;
     align-items: center; /* Align items horizontally centered */
@@ -13,6 +6,14 @@
     text-align: center;
     padding: 20px;
 }
+
+.header { 
+    background-color: #333;
+    color: white;
+    padding: 1em;
+    text-align: center;
+}
+
 
 .d-flex {
     display: flex;
@@ -27,15 +28,15 @@
     width: 100%;
     margin: 20px 0;
     text-align: left;
-    background-color: rgb(236, 236, 236); /* Light grey background */
     border-radius: 8px; /* Rounded corners */
     overflow: hidden; /* Hide overflow */
     position: relative; /* For positioning the scroll animations */
+    table-layout: fixed;
 }
 
 /* Table headers */
 .kols-table th, .kols-table td {
-    border: 1px solid #c8c4c4;
+    border: 1px solid #ffffff;
     padding: 12px; /* Increase padding for better readability */
     text-align: center; /* Center-align table content */
 }
@@ -51,7 +52,7 @@
 }
 
 .kols-table tr:hover {
-    background-color: #e1e1e1; /* Background color on hover */
+    background-color: #ffffff; /* Background color on hover */
     color: black;
 }
 
